ISSUE:111 Dev: Rev: Desc:

--- a/src/main/resources/aws.properties
+++ b/src/main/resources/aws.properties
@@ -1,2 +1,4 @@
-accessKey=keyfdsfsdfsf
+accessKey=keyfdsfsdfsf1111111111111111111111111
 secretKey=sdfsdfsdafsdfsfsad
+key=sdfasf
+fdsfd=sdfasdfadsf
