--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
 			<artifactId>aws-java-sdk</artifactId>
 			<version>1.10.62</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/javax.jms/jms-api -->
+		<dependency>
+		    <groupId>javax.jms</groupId>
+		    <artifactId>jms-api</artifactId>
+		    <version>1.1-rev-1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>jfree</groupId>
