--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
 		    <version>1.1-rev-1</version>
 		</dependency>
 
+
+<dependency>
+		    <groupId>javax.jms</groupId>
+		    <artifactId>jms-api</artifactId>
+		    <version>1.1-rev-1</version>
+		</dependency>
+
 		<dependency>
 			<groupId>jfree</groupId>
 			<artifactId>jfreechart</artifactId>
