Date base properties changed

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,5 @@
 hibernate.connection.url=jdbc:mysql://localhost:3306/trafficAnalysis
 hibernate.connection.driver_class=com.mysql.jdbc.Driver
 hibernate.connection.username=root
-hibernate.connection.password=root
+hibernate.connection.password=root1
+text.config=true
